--- a/EmployeeSQL/Bonus.ipynb
+++ b/EmployeeSQL/Bonus.ipynb
@@ -11,7 +11,7 @@
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
     "\n",
-    "engine = create_engine('postgresql://postgres:cH2fe703de8mvwtG@34.123.206.171:5432/sql_hw')\n",
+    "engine = create_engine('postgresql://[un]:[pw]@[ip]:5432/sql_hw')\n",
     "conn = engine.connect()\n"
    ]
   },
